--- a/算法与计算机基础知识总结.md
+++ b/算法与计算机基础知识总结.md
@@ -223,3 +223,182 @@ public:
 };
 ```
 
+### 8. 无重复字符的最长子串
+
+原题链接：
+
+[3. 无重复字符的最长子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-substring-without-repeating-characters/description/?envType=study-plan-v2&envId=top-100-liked)
+
+```c++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        int n = s.length();
+        int l = 0, r = 0;
+        int res = 0;
+        unordered_map<char, int> mp;	//字符和出现的次数
+        while(r < n)	//滑动窗口右指针
+        {
+            mp[s[r]] ++;
+            while(mp[s[r]] > 1)	//当出现了两次及以上时缩小窗口
+            {
+                mp[s[l]] --;
+                l ++;
+            }
+            res = max(res, r - l + 1);
+            r ++;
+        }
+        return res;
+    }
+};
+```
+
+### 9. 找到字符中所有字母异位词
+
+原题链接：
+
+[438. 找到字符串中所有字母异位词 - 力扣（LeetCode）](https://leetcode.cn/problems/find-all-anagrams-in-a-string/description/?envType=study-plan-v2&envId=top-100-liked)
+
+```c++
+class Solution {
+public:
+    vector<int> findAnagrams(string s, string p) {
+        int n = s.length(), m = p.length();
+        unordered_map<char, int> target;	//string p 中 字符 与 其个数 对应的哈希表
+        unordered_map<char, int> current;	//滑动窗口中的字符 与 其个数 对应的哈希表
+        for(int i = 0; i < m; i ++)
+            target[p[i]] ++;
+        vector<int> res;
+        int count = target.size();	//target字符的个数
+        int l = 1 - m, r = 0;
+        int number = 0;
+        while(r < n)
+        {
+            current[s[r]] ++;	//滑动窗口向右滑动
+            if(target.find(s[r]) != target.end() && current[s[r]] == target[s[r]])
+                number ++;		//当current[s[r]]等于target中s[r]的个数时，计数 + 1
+            if(number == count)
+                res.push_back(l);
+            if(l >= 0)
+            {
+                if(target.find(s[l]) != target.end() && target[s[l]] == current[s[l]])
+                    number --;
+                current[s[l]] --;
+            }
+            l ++;
+            r ++;
+        }
+        return res;
+    }
+};
+```
+
+### 10.和为k的子数组
+
+原题链接：
+
+[560. 和为 K 的子数组 - 力扣（LeetCode）](https://leetcode.cn/problems/subarray-sum-equals-k/description/?envType=study-plan-v2&envId=top-100-liked)
+
+```c++
+class Solution {
+public:
+    int subarraySum(vector<int>& nums, int k) {
+        unordered_map<int, int> mp;
+        mp[0] = 1;
+        int n = nums.size();
+        int res = 0, sum = 0;
+        for(int i = 0; i < n; i ++)
+        {   
+            sum += nums[i];
+            //nums[0] + nums[1] + nums[2] + ... nums[i] = pre[i];
+            //nums[0] + nums[1] + nums[2] + nums[i] + nums[i + 1]... nums[j] = pre[j];
+            //pre[j] - pre[i] = nums[i + 1] + nums[i + 2] + ... nums[j] = k
+            if(mp.find(sum - k) != mp.end())
+                res += mp[sum - k];
+            mp[sum]++;//注意在
+        }
+        return res;
+    }
+};
+```
+
+### 11. 滑动窗口最大值
+
+原题链接：
+
+[239. 滑动窗口最大值 - 力扣（LeetCode）](https://leetcode.cn/problems/sliding-window-maximum/description/?envType=study-plan-v2&envId=top-100-liked)
+
+```c++
+class Solution {
+public:
+    vector<int> maxSlidingWindow(vector<int>& nums, int k) {
+        int n = nums.size();
+        deque<int> que;		//双端队列，既可以头插 又可以 尾插
+        vector<int> res;
+        int l = 1 - k, r = 0;
+        while(r < n)
+        {
+            while(!que.empty() && nums[r] > que.back())
+                que.pop_back();		//维持一个单调队列
+            que.push_back(nums[r]);
+            if(l >= 0)
+            {
+                res.push_back(que.front());	
+                if(nums[l] == que.front()) //形成滑动窗口后如果 队头被滑出窗口，需要清除队头
+                    que.pop_front();
+            }
+            l ++;
+            r ++;
+        }
+        return res;
+    }
+};
+```
+
+### 12. 最小覆盖字串
+
+原题链接：
+
+[76. 最小覆盖子串 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-window-substring/description/?envType=study-plan-v2&envId=top-100-liked)
+
+```c++
+class Solution {
+public:
+    string minWindow(string s, string t) {
+        int n = s.length(), m = t.length();
+        int current[256] = {0}, target[256] = {0};
+        int l = 0, r = 0;
+        for (int i = 0; i < m; i++) {
+            target[t[i]]++;
+        }
+        int sumCount = 0;
+        for (int i = 0; i < 256; i++)
+            if (target[i] > 0)
+                sumCount++;
+        int count = 0;
+        int res = INT_MAX;
+        int start = 0;
+        while (r < n) {
+            current[s[r]]++;
+            if (current[s[r]] == target[s[r]]) {
+                count++;
+            }
+            //while中是缩小窗口的步骤
+            while (count == sumCount) {
+                if (res > r - l + 1) {
+                    res = r - l + 1;
+                    start = l;
+                }
+                current[s[l]]--;	//先减少！！如果存在current[s[l]] > target[s[l]]的情况需要多减少几次才可以
+                if (target[s[l]] > 0 && current[s[l]] < target[s[l]]) 
+                    count--;
+                l++;
+            }
+
+            r++;
+        }
+        return res == INT_MAX ? "" : s.substr(start, res);
+    }
+};
+```
+
